# docs

./: .gitignore  README.md  _config.yml  _toc.yml  intro.md  pyproject.toml  references.bib  requirements.txt
.github/workflows/: build-jupyter-book.yml
brick/: aliases.md  concepts.md  designpatterns.md  overview.md  relationships.md  timeseries.md
extra/: brick-rec.md  custom-shapes.md  extending.md
lifecycle/: creation.md  distribution.md  inference  inference.md  validation.md  versioning.md
metadata/: entity-properties.md  external-representations.md  overview.md  tags.md  timeseries-storage.md
modeling/: collections.md  connections.md  meters.md  point-collections.md  point-groups.md  terminal-units.md
software/: database.md  interfaces.md
