[project]
name = "brick-docs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gabe Fierro", email = "gtfierro@mines.edu" }
]
dependencies = [
    "jupyter-book>=1.0.0",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "sphinxcontrib-bibtex>=2.6.2",
    "sparqlkernel>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/brick_docs"]
